...
};

export type MainTabParamList = {
  Home: undefined;
  Courses: { initialSearch?: string } | undefined;
  Schedule: undefined;
  Chats: undefined;
  Profile: undefined;
};

